<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E1822"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/cpu_button"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:backgroundTint="#0099cc"
        android:text="@string/procesor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/gpu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karta_graficzna"
        android:backgroundTint="#006700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/mobo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#006700"
        android:text="@string/p_yta_g_wna"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <Button
        android:id="@+id/ram_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pami_ram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#006700"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <Button
        android:id="@+id/fan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#006700"
        android:text="@string/ch_odzenie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <Button
        android:id="@+id/tower_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obudowa"
        android:backgroundTint="#006700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <Button
        android:id="@+id/psu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zasilacz"
        android:backgroundTint="#006700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/disk_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#006700"
        android:text="@string/dysk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_intel_amd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textOff="@string/switch_text_Intel"
        android:textOn="@string/switch_text_AMD"
        app:showText="true"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:track="@drawable/switch_track"

        />

    <ImageView
        android:id="@+id/imageCPU"
        android:layout_width="83dp"
        android:layout_height="113dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/cpu_image"
        app:layout_constraintBottom_toBottomOf="@+id/cpu_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661"
        app:srcCompat="@drawable/cpu" />

    <ImageView
        android:id="@+id/imageGPU"
        android:layout_width="101dp"
        android:layout_height="75dp"
        android:contentDescription="@string/gpu_image"
        app:layout_constraintBottom_toTopOf="@+id/gpu_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/gpu" />

    <ImageView
        android:id="@+id/imageMobo"
        android:layout_width="174dp"
        android:layout_height="115dp"
        android:contentDescription="@string/mobo_image"
        app:layout_constraintBottom_toTopOf="@+id/mobo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/motherboard2" />

    <ImageView
        android:id="@+id/imageTower"
        android:layout_width="132dp"
        android:layout_height="97dp"
        android:contentDescription="@string/tower_image"
        app:layout_constraintBottom_toTopOf="@+id/tower_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pc" />

    <ImageView
        android:id="@+id/imageFan"
        android:layout_width="156dp"
        android:layout_height="106dp"
        android:contentDescription="@string/fan_image"
        app:layout_constraintBottom_toTopOf="@+id/fan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/fan" />

    <ImageView
        android:id="@+id/imageRAM"
        android:layout_width="105dp"
        android:layout_height="107dp"
        android:contentDescription="@string/ram_image"
        app:layout_constraintBottom_toTopOf="@+id/ram_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ram1" />

    <ImageView
        android:id="@+id/imageDisk"
        android:layout_width="114dp"
        android:layout_height="102dp"
        android:contentDescription="@string/disk_image"
        app:layout_constraintBottom_toTopOf="@+id/disk_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ssd" />

    <ImageView
        android:id="@+id/imagePSU"
        android:layout_width="99dp"
        android:layout_height="121dp"
        android:contentDescription="@string/psu_image"
        app:layout_constraintBottom_toTopOf="@+id/psu_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/power_supply" />

</androidx.constraintlayout.widget.ConstraintLayout>
