...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cpuIntelActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0E1822"
        tools:context=".cpuActivity">


...
